Show navbar hamburger menu on mobile + small logo fixes

--- a/static/css/custom/main.css
+++ b/static/css/custom/main.css
@@ -1,7 +1,3 @@
-.header .left-block.tower-logo {
-    min-width: 265px;
-}
-
 .header .right-block .seqera-logo {
     width: 200px;
 }
@@ -17,3 +13,30 @@
 .pretty-screenshot {
     margin-left: 0 !important;
 }
+
+@media screen and (min-width: 200px) {
+    .header .left-block.tower-logo {
+        min-width: 190px;
+    }
+
+    .header .right-block .seqera-logo {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 859px) {
+    .header .right-block .seqera-logo {
+        display: block;
+    }
+
+    .header.docs .mini-nav--toggle {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 360px) {
+    .header .left-block.tower-logo {
+        min-width: 265px;
+    }
+}
+
